URL path fixes and removal of redcarpet

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ backgrounds:
   case_study: green
   team: dark-blue
 hero:
-  banner: /img/heroes/herald.png
+  banner: /herald/img/heroes/herald.png
   headline: Reliable mobile Bluetooth
   content: Herald provides reliable Bluetooth communication and range finding across a wide range of mobile devices, allowing Contact Tracing and other applications to have regular and accurate information to make them highly effective.
   cta_link1:
     text: Get Started with Herald
-    url: /docs
+    url: /herald/docs
   cta_link2:
     text: Download iOS Release
     url: https://github.com/vmware/herald-for-ios
@@ -19,28 +19,28 @@ hero:
     text: Download Android Release
     url: https://github.com/vmware/herald-for-android
   promo1:
-    icon: /img/testing-icon.svg
+    icon: /herald/img/testing-icon.svg
     #url: http://www.example.com?box1
     title:  Wide phone support
     content: 97.5% of phones worldwide can use the Herald Protocol
   promo2:
-    icon: /img/debug-icon.svg
+    icon: /herald/img/debug-icon.svg
     #url: http://www.example.com?box2
     title:  Easy to integrate
     content: Provide a few callbacks to the Herald API and integrate Herald to your app in minutes using your own payload
   promo3:
-    icon: /img/test-icon.svg
+    icon: /herald/img/test-icon.svg
     #url: http://www.example.com?box3
     title: Flexible
     content: Does not restrict how people can use it, for contact tracing or any reliable Bluetooth communication
 secondary_ctas:
   cta1:
     title: Measuring Bluetooth efficacy
-    url: /efficacy/
+    url: /herald/efficacy/
     content: Read an overview of how efficacy for contact tracing can be assessed
   cta2:
     title: Learn how Herald is used for custom Bluetooth mobile apps
-    url: /payloads/custom
+    url: /herald/payload/outer
     content: Learn how to create your own mobile app using Herald
 #reference:
 #  title: Getting Herald
@@ -190,7 +190,7 @@ secondary_ctas:
     {% include blog-posts.html %}
     <div class="row pt-5">
       <div class="col text-center">
-        <a href="/blog" class="btn btn-secondary btn-sm">See All Posts</a>
+        <a href="/herald/blog" class="btn btn-secondary btn-sm">See All Posts</a>
       </div>
     </div>
   </div>
