Fixes #13 #11. Updated website for v1.1 release
Updated website for v1.1 release
- Changed license to CC-BY
- Added latest v1.1 performance results
- Added blog release post
- Typo fixes
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ tracing to help save lives. ❤️
 
 All Herald works are Copyright 2020 Herald Authors.
 </p><p>
-<a href="https://opensource.org/licenses/MIT" target="_new"><img src="https://img.shields.io/badge/License-MIT-yellow.svg" alt="MIT Licensed" /></a>
-</p><p>
-The repositories for Herald (Herald, Android, iOS, Analysis Scripts, Calibration tool) are MIT licensed.
+The code for Herald (Android, iOS, Analysis Scripts, Calibration tool) are Apache-2.0 licensed. The documentation for Herald, including this website, are under the Creative Commons Attribution 4.0 International Public License.
 </p><p>
 See LICENSE.txt and NOTICE.txt for details.
 </p>
