Fixed typo in line 454
neaby changed to nearby

--- a/protocol/index.html
+++ b/protocol/index.html
@@ -451,7 +451,7 @@
   <li>Hardware Approaches
     <ul>
       <li>Ephemeral ID in advert approach: Some phones also rotate mac address every few seconds rather than once every 15 minutes forcing the ID payload to be fetched, and increasing delay. We work around this using an ephemeral ID approach.</li>
-      <li>Uses a ‘write characteristic’ allowing phones that cannot advertise (<a href="/herald/efficacy/statistics">~14% approx of UK phones</a>) to tell other phones they are neaby, and still provide regular distance estimation data</li>
+      <li>Uses a ‘write characteristic’ allowing phones that cannot advertise (<a href="/herald/efficacy/statistics">~14% approx of UK phones</a>) to tell other phones they are nearby, and still provide regular distance estimation data</li>
       <li>Android bluetooth stack randomly fails in some circumstances, so our protocol has been extensively tested and checked for these situations to prevent them.</li>
     </ul>
   </li>
