--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ See LICENSE.txt and NOTICE.txt for details.
 <div class="row">
   <div class="col">
     <p>Herald Project is released as open source software and provides community support through our GitHub project page.
-        If you encounter an issue or have a question, feel free to reach out on the <strong><a href="https://vmware.github.io/herald/issues" class="light">GitHub issues page for Herald Project</a></strong>.</p>
+        If you encounter an issue or have a question, feel free to reach out on the <strong><a href="https://vmware.github.com/herald/issues" class="light">GitHub issues page for Herald Project</a></strong>.</p>
     <p>The Herald project team welcomes contributions from the community — please see our <strong><a href="https://github.com/vmware/herald/blob/master/contributing.md" class="light">contributing documentation</a></strong>.</p>
   </div>
 </div>
