--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ secondary_ctas:
       </div>
     </div>
   </div>
-</div> <!-- /home-hero -->
+</div> 
 <div class="section section-card section-card-offset-top promo-cards">
   <div class="section-content">
     <div class="row">
