Added upstream project diagram to archimate
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/documents/architecture/index.html
+++ b/documents/architecture/index.html
@@ -68,6 +68,16 @@
 													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-8565dd6cc48345d9a211867dfcd3d144.html" target="element"> Threat Actors </a></li>
 													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-d75b8c09e0354541a377dfef98c0b2dd.html" target="element"> Organised Crime </a></li>
 													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-643560d60a1c4a4d94b611a1d70c58ad.html" target="element"> Herald Developer </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-843a03e4c5b045489fa8c29418df2933.html" target="element"> Herald for C++ </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-5eb7e11bc6ba4f59873f2b6299354150.html" target="element"> Herald for iOS </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-fb1a3ed30a624782997415826f6dc6e1.html" target="element"> Herald for Android </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-1b1c5e97026745fca7aabd3602943c83.html" target="element"> Herald Hardware </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-3428171376e64b2292e3749e8c19f0ad.html" target="element"> OpenTrace for Android </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-431be9a06a5a4a1f812dfbc92630170a.html" target="element"> OpenTrace for iOS </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-caf2cfa9c9554d0aa0b1d3f11d46b16b.html" target="element"> OpenTrace for Wearables </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-741bab8a32dd4535a3a8fdb7fa2edb48.html" target="element"> OpenTrace Cloud Functions </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-5e6bbacaa9454672a17d92ab6b3325e5.html" target="element"> Herald for Node.js </a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-ffbee913493d48a99003f7660dea6546.html" target="element"> OpenTrace Beacons </a></li>
 
 									</ul>
 								</li>
@@ -461,6 +471,46 @@
 															Serves
 														(Herald Developer - Herald Users) 
 													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-2e50d30edfa44d9f812e6a220e1cd929.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace for Wearables - Herald Hardware) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-05f0ccb337734e9589b24b7a83fb6a24.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace for Wearables - Herald for C++) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-576dbd0adfe3498ca8afa5edbe383c9f.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace for iOS - Herald for iOS) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-0681b5d17fa74704a73edabbdd5b6b36.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace for Android - Herald for Android) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-1b78d4bdb9384df7b58fb1d96f8da077.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace Cloud Functions - Herald for Node.js) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-80ef43bba8aa4783b416bacd8aef4266.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(Herald for Node.js - Herald for C++) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-29c3271af5a845be8bf1abbff25e878b.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace Beacons - Herald Hardware) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-63efd5ff732e412e9ba6217b0065f099.html" target="element">
+															<span class="i18n-elementtype-CompositionRelationship"></span>
+														(OpenTrace Beacons - Herald for C++) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-f0957815e40e4aa38d4a6d34ecf2d038.html" target="element">
+															<span class="i18n-elementtype-SpecializationRelationship"></span>
+														(Herald for Android - Herald for C++) 
+													</a></li>
+													<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/elements/id-7cfde6bb1c2b456597f6ba6c1c2aa9fb.html" target="element">
+															<span class="i18n-elementtype-SpecializationRelationship"></span>
+														(Herald for iOS - Herald for C++) 
+													</a></li>
 
 									</ul>
 								</li>
@@ -472,6 +522,7 @@
 											<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/views/id-38305833f5594cab96886891ff7d9d47.html" target="view"> 21. Bluetooth Data Flow </a></li>
 											<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/views/id-91fdc3c49fe543dd8d92431b40d176ba.html" target="view"> 02. Personae </a></li>
 											<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/views/id-b7208a9265be4a9d9d47bc1f59a52550.html" target="view"> 00. Master views index </a></li>
+											<li class="tree-element"><a href="id-c4bba3876a1b48d186c73843f80dfbf6/views/id-0e96ced69a8946f89bb3b0e36bbe37fa.html" target="view"> 03. Project upstream </a></li>
 
 							</ul>
 						</li>
