New website home URLs working
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@ backgrounds:
   case_study: green
   team: dark-blue
 hero:
-  banner: /herald/img/heroes/herald.png
+  banner: /img/heroes/herald.png
   headline: Proximity detection, distance estimation & data sharing
   content: Herald provides reliable Bluetooth communication and range finding across a wide range of mobile devices, wearables, and beacons allowing Contact Tracing and other applications to have regular and accurate information to make them highly effective.
   cta_link1:
     text: Learn about Herald
-    url: /herald/about
+    url: /about
   cta_link2:
     text: Download Herald
-    url: /herald/download
+    url: /download
   cta_link3:
     text: Read Documentation
-    url: /herald/docs
+    url: /docs
   promo1:
-    icon: /herald/img/testing-icon.svg
-    url: /herald/about#phone-support
+    icon: /img/testing-icon.svg
+    url: /about#phone-support
     title:  Wide phone support
     content: 97.5% of phones worldwide can use the Herald Protocol
   promo2:
-    icon: /herald/img/debug-icon.svg
-    url: /herald/about#detection
+    icon: /img/debug-icon.svg
+    url: /about#detection
     title:  Detect nearby devices
     content: 100% detection of devices in the foreground and background
   promo3:
-    icon: /herald/img/test-icon.svg
-    url: /herald/about#distance
+    icon: /img/test-icon.svg
+    url: /about#distance
     title: Regular distance readings
     content: Regularly read signal strength and convert to distance
   promo4:
-    icon: /herald/img/test-icon.svg
-    url: /herald/about#environment
+    icon: /img/test-icon.svg
+    url: /about#environment
     title: Log other readings
     content: Temperature, gas concentration, or estimate disease risk exposure
   promo5:
-    icon: /herald/img/test-icon.svg
-    url: /herald/about#interoperability
+    icon: /img/test-icon.svg
+    url: /about#interoperability
     title: Interoperate
     content: A wide range of devices and application can interoperate using Herald
 secondary_ctas:
   cta1:
     title: Measuring Bluetooth efficacy
-    url: /herald/efficacy/
+    url: /efficacy/
     content: Read an overview of how efficacy for contact tracing can be assessed
   cta2:
     title: Learn how Herald is used in applications
-    url: /herald/applications
+    url: /applications
     content: Learn about Herald powered applications
 #reference:
 #  title: Getting Herald
@@ -171,7 +171,7 @@ secondary_ctas:
     {% include blog-posts.html %}
     <div class="row pt-5">
       <div class="col text-center">
-        <a href="/herald/blog" class="btn btn-secondary btn-sm">See All Posts</a>
+        <a href="/blog" class="btn btn-secondary btn-sm">See All Posts</a>
       </div>
     </div>
   </div>
